<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.DetailView">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/placeholder" />

    <TextView
        android:id="@+id/nameDisplay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="name"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="300dp" />

    <TextView
        android:id="@+id/tagDisplay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Casual Yellow T-Shirt"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="351dp" />

    <TextView
        android:id="@+id/coloursTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Complementary Colours"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="414dp" />

    <TextView
        android:id="@+id/outfitsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Outfits"
        tools:layout_editor_absoluteX="292dp"
        tools:layout_editor_absoluteY="414dp" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DONE"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="667dp" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EDIT"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="667dp" />

</androidx.constraintlayout.widget.ConstraintLayout>